--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node server.js"
+    "test": "snyk test",
+    "start": "nodemon node server.js",
+    "snyk-protect": "snyk protect",
+    "prepare": "npm run snyk-protect"
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +16,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.1",
-    "express-validator": "^6.4.0",
+    "express-validator": "^6.4.1",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "rate-limit-mongo": "^2.1.0"
+    "rate-limit-mongo": "^2.1.0",
+    "snyk": "^1.316.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -28,5 +31,6 @@
     "nodemon": "^2.0.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
-  }
+  },
+  "snyk": true
 }
