--- a/package.json
+++ b/package.json
@@ -13,24 +13,24 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "express-rate-limit": "^5.1.1",
-    "express-validator": "^6.4.1",
-    "helmet": "^3.22.0",
+    "express-rate-limit": "^5.2.6",
+    "express-validator": "^6.12.0",
+    "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10",
-    "rate-limit-mongo": "^2.1.0",
-    "snyk": "^1.316.2"
+    "mongoose": "^5.12.14",
+    "rate-limit-mongo": "^2.3.1",
+    "snyk": "^1.639.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "babel-preset-es2015": "^6.24.1",
     "eslint-plugin-security": "^1.4.0",
-    "nodemon": "^2.0.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
+    "nodemon": "^2.0.7",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "snyk": true
 }
